--- a/css/sections.css
+++ b/css/sections.css
@@ -4,6 +4,7 @@
   inset: 0;
   z-index: 50;
   overflow-y: scroll;
+  overflow-x: hidden;
   scroll-snap-type: y mandatory;
   scroll-behavior: smooth;
 }
